--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
@@ -20,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@mdi/font": "^6.7.96",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
