--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vuetify": "^3.0.0-beta.0",
