--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-gtag": "^2.0.1",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
