--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-gtag": "^2.0.1",
+    "vue-router": "^4.0.0-0",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
@@ -25,6 +26,7 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
