--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-beta-app",
-  "version": "0.1.0",
+  "name": "stat-milestones-website",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vite preview",
@@ -9,18 +9,18 @@
     "dev": "vite"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "core-js": "^3.26.1",
+    "axios": "^1.2.5",
+    "core-js": "^3.27.2",
     "material-design-icons-iconfont": "^6.7.0",
-    "roboto-fontface": "*",
+    "roboto-fontface": "0.10.0",
     "vue": "^3.2.45",
     "vue-gtag": "^2.0.1",
     "vue-router": "^4.1.6",
     "vuetify": "^3.0.4",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
     "@mdi/font": "^7.1.96",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -28,10 +28,10 @@
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^9.8.0",
-    "vite": "^4.0.0",
-    "vite-plugin-vuetify": "^1.0.1",
+    "eslint": "^8.32.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "vite": "^4.0.4",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue-cli-plugin-vuetify": "^2.5.8"
   },
   "eslintConfig": {
