--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,12 +36,15 @@ jobs:
           node-version: 18
           cache: 'npm'
           
-      - run: cd stat-milestones-website
+      - run: ls
       
       - name: Install dependencies
         run: npm install
-      - name: Build
+
+      - name: Vite Build
         run: npm run build
+
+        
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
@@ -49,6 +52,7 @@ jobs:
         with:
           # Upload dist repository
           path: './dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
