--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -53,6 +53,8 @@ jobs:
           # Upload dist repository
           path: './dist'
 
+      - name: Copy HTML file
+        run: cp ./dist/index.html ./dist/channels.html
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
