--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm run build
 
       - name: Copy HTML file
-        run: cp ./dist/index.html ./dist/channels.html
+        run: cp ./dist/index.html ./dist/channels.html && cp ./dist/index.html ./dist/playground.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
